--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,11 @@
-
 body {
-  background-color: darkgreen;
-}
-h1 {
-  color: red;
+  margin: 0 20% 0 20%;
 }
 
-.myName {
-  color: teal;
+header {
+  text-align: center;
 }
-h4 {
-  font-size: 12px;
-  color: gray;
-}
-h3 {
-  color: orange;
+
+.center {
+  text-align: center;
 }
