--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ header {
 }
 
 .border {
-  border-bottom: 2px dotted black;
+  border-bottom: 2px dotted #07BEB8;
 }
 
 .center {
@@ -15,7 +15,7 @@ header {
 }
 
 h1 {
-  color: #577590;
+  color: #2F6690;
 }
 
 h3 {
@@ -30,5 +30,5 @@ h4 {
 
 footer {
   font-size: 11px;
-  border-top: 3px groove;
+  border-top: 3px groove #07BEB8;
 }
