--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,18 @@
+a {
+  font-size: 10px;
+}
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+}
+
+h3 {
+  border: 3px solid black;
+  display: inline-block;
+}
