--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,6 @@ li {
   margin: auto;
 }
 
-.paragraph {
-  color: white;
-}
-
 .unity {
   color: white;
   margin-top: 250px;
@@ -71,13 +67,6 @@ li {
 
 .invent {
   font-size: 10px;
-}
-
-.firstPage {
-  background-image: url("../../photoshopLayers/background1.png");
-  background-size: 100%;
-  height: 900px;
-  background-repeat: no-repeat;
 }
 
 .sidebar {
@@ -127,6 +116,13 @@ li {
 
 }
 
+.whitescroll {
+  color: white;
+  position: relative;
+  top: 50px; left: 18px;
+  font-size: 23px;
+}
+
 .stretch {
   width: 100%;
   height: 100px;
@@ -155,7 +151,27 @@ li {
   top: 110px; right: 250px;
 }
 
-.secondPage {
+.line2 {
+  display: block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../../photoshopLayers/dash.png") no-repeat;
+  width: 30px;
+  height: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+  position: relative;
+  top: 90px; right: 200px;
+}
+
+.first {
+  background-image: url("../../photoshopLayers/background1.png");
+  background-size: 100%;
+  height: 900px;
+  background-repeat: no-repeat;
+}
+
+.second {
   background-image: url("../../photoshopLayers/purpleback.png");
   height: 900px;
   background-repeat: no-repeat;
@@ -163,10 +179,53 @@ li {
 
 }
 
-.thirdPage {
+.third {
   background-image: url("../../photoshopLayers/WeAreUnity.png");
   background-size: 100%;
   height: 900px;
   background-repeat: no-repeat;
   margin: auto;
+}
+
+.fourth {
+  background-image: url("../../photoshopLayers/whiteback.png");
+  height: 900px;
+  background-repeat: no-repeat;
+  margin: auto;
+}
+
+.fifth {
+  background-image: url("../../photoshopLayers/snowback.png");
+  height: 900px;
+  background-repeat: no-repeat;
+  margin: auto;
+}
+
+.p3 {
+  position: relative;
+  top: 120px;
+}
+
+.play {
+  position: relative;
+  top: 200px; left: 50%;
+  display: block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../../photoshopLayers/playbutton.png") no-repeat;
+  width: 64px;
+  height: 64px;
+}
+
+.scroll {
+  display: block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../../photoshopLayers/scroll.png") no-repeat;
+  width: 30px;
+  height: 75px;
+  padding-left: 50px;
+  padding-right: 50px;
+  position: relative;
+  top: 75px; left: 433px;
 }
