--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,13 @@ li {
 .white {
   color: white;
   margin: auto;
+  text-align: left;
+  position: relative;
+  top: 40px; left: 330px;
+}
+
+.column2 {
+  color: white;
 }
 
 .unity {
@@ -67,6 +74,11 @@ li {
 
 .invent {
   font-size: 10px;
+  color: white;
+  margin: auto;
+  text-align: left;
+  position: relative;
+  top: 40px; left: 330px
 }
 
 .sidebar {
@@ -80,12 +92,15 @@ li {
 .complex {
   height: 100px;
   width: 22%;
+  text-align: left;
+  font-size: 50px;
   float: left;
   position: relative;
-  left: 65px; top: 100px;
+  left: 60px; top: 50px;
 }
 
 .wedo {
+  color: white;
   width: 60%;
   float: right;
   text-align: left;
@@ -99,6 +114,7 @@ li {
 }
 
 .column {
+  text-align: left;
   width: 30%;
   display: inline-block;
   margin-top: 150px;
@@ -106,10 +122,14 @@ li {
 
 .lefty {
   float: left;
+  position: relative;
+  left: 25px;
 }
 
 .righty {
   float: right;
+  position: relative;
+  right: 25px;
 }
 
 .middle {
@@ -120,7 +140,7 @@ li {
   color: white;
   position: relative;
   top: 50px; left: 18px;
-  font-size: 23px;
+  font-size: 18px;
 }
 
 .stretch {
@@ -227,5 +247,79 @@ li {
   padding-left: 50px;
   padding-right: 50px;
   position: relative;
-  top: 75px; left: 433px;
+  top: 88px; left: 442px;
+}
+
+.downarrow {
+  display: block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../../photoshopLayers/downarrow.png") no-repeat;
+  width: 30px;
+  height: 75px;
+  padding-left: 50px;
+  padding-right: 50px;
+  position: relative;
+  top: 90px; left: 458px;
+}
+
+.box {
+  display: block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../../photoshopLayers/whitebox.png") no-repeat;
+  width: 500px;
+  height: 500px;
+  position: relative;
+  top: 55px; left: 320px;
+}
+
+.underline {
+  display: block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../../photoshopLayers/underline.png") no-repeat;
+  height: 10px;
+  width: 44px;
+}
+
+.uno {
+  display: block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../../photoshopLayers/01.png") no-repeat;
+  width: 500px;
+  height: 500px;
+  position: relative;
+  bottom: 295px; left: 190px;
+}
+
+.icon1 {
+  display: block;
+  box-sizing: border-box;
+  background: url("../../photoshopLayers/handmade.png") no-repeat;
+  height: 50px;
+  width: 50px;
+  position: relative;
+  left: 10px; bottom: 40px;
+}
+
+.icon2 {
+  display: block;
+  box-sizing: border-box;
+  background: url("../../photoshopLayers/creative.png") no-repeat;
+  height: 50px;
+  width: 50px;
+  position: relative;
+  left: 10px; bottom: 40px;
+}
+
+.icon3 {
+  display: block;
+  box-sizing: border-box;
+  background: url("../../photoshopLayers/support.png") no-repeat;
+  height: 50px;
+  width: 50px;
+  position: relative;
+  left: 10px; bottom: 40px;
 }
